[package]
name = "my-site-backend"
version = "0.1.0"
authors = ["ShaneEverittM <shaneemurphy146@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_cors = "0.5.1"
rocket_contrib = "0.4.4"
subprocess = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
config = "0.10.1"